2006-06-25  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/lang/Class/newInstance.java: Add checks for
	interface, abstract, primitive and void classes.

2006-06-24  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/testlet/java/lang/management/ClassLoadingMXBeanTest.java:
	New test to ensure security of setVerbose is maintained.
	
2006-06-24  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/testlet/java/lang/management/BadGuy.java:
	Restrictive security manager used for testing
	the management beans.
	* gnu/testlet/java/lang/management/OperatingSystemMXBeanTest.java,
	* gnu/testlet/java/lang/management/RuntimeMxBeanTest.java:
	New tests for the management beans.
	* gnu/testlet/java/util/logging/LoggingMXBean.java:
	Test the logging bean.

2006-06-24  Mark Wielaard  <mark@klomp.org>

	* Harness.java (getBootClassPath): Add Thread.sleep().
	(runTest): Likewise.

2006-06-22  Anthony Balkissoon  <abalkiss@redhat.com>

	* Harness.java:
	(runTest): If the RunnerProcess cannot be instantiated, print the 
	message to stderr not stdout.
	(getBootClassPath): If the bootclasspath cannot be detected, print the 
	message to stderr not stdout.

2006-06-22  Anthony Balkissoon  <abalkiss@redhat.com>

	* Harness.java: 
	(runner_in_err): New field.
	(getBootClassPath): Use the vmArgs when forking the detector.
	(finalize): Close the pipe to the RunnerProcess' error stream.
	(initProcess): Set up the pipe to the RunnerProcess' error stream. 
	Stop the watcher after confirming startup.
	(runTest): Collect error stream output from the RunnerProcess in a 
	StringBuffer and print it when there's no new regular output from the 
	test.  Also print it after the test has completed.

2006-06-22  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/JLabel/getActionMap.java: New file,
	* gnu/testlet/javax/swing/JLabel/getInputMap.java
	(testMethod2): Added new checks,
	* gnu/testlet/javax/swing/JLabel/setDisplayedMnemonic.java